some fixes to footer and word slider spacing

--- a/assets/src/scss/4.modules/_md-footer.scss
+++ b/assets/src/scss/4.modules/_md-footer.scss
@@ -108,6 +108,10 @@
 
 @include tablet-only {
   .footer {
+    &__container {
+      @include container(2em);
+      padding-bottom: 6em !important;
+    }
     &__bottom {
       align-items: baseline;
       justify-content: space-between;
