--- a/assets/src/scss/5.templates/_tp-projet.scss
+++ b/assets/src/scss/5.templates/_tp-projet.scss
@@ -66,7 +66,7 @@
 }
 
 .projet-navigation {
-  margin-bottom: -2em;
+  margin-bottom: -3em;
   &__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
